# pcl-projects

./: CMakeLists.txt  README  README.md  cluster_extract.cpp  fitCubes.py  fit_planes.cpp  grabCentroids.py  pcd_write.cpp  test_io.cpp  wireFinder.py
src/: CMakeLists.txt  bin2pcd.cpp  binfile.cpp  binfile.h  cluster_extract.cpp  constants.h  convex_hull.cpp  fit_planes.cpp  full_cloud_register.cpp  icp_cubes.cpp  make_test_cubes.cpp  pcd2bin.cpp  pcd_write.cpp  planeinfo.h  ransac_cubes.cpp  test_io.cpp
